Fix spacing at the top of the main home page

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,6 +1,6 @@
 .Home {
   &__content {
-    padding: 160px 40px;
+    padding: 180px 40px;
     max-width: 1600px;
     margin: 0 auto;
   }
